# opentelemetry-python-genai

./: .codespellrc  .weaver.toml  AGENTS.md  CLAUDE_AGENT_SDK_INSTRUMENTATION_PLAN.md  RELEASING.md  dev-requirements-conformance.txt  dev-requirements.txt  docs-requirements.txt  pyproject.toml  rtd-requirements.txt  tox.ini
.github/: renovate.json5
.github/instructions/: instrumentation.instructions.md
.github/workflows/: _prepare-release-package.yml  _release-build.yml  _release-finalize.yml  _release-package.yml  bump-package-major.yml  bump-package-minor.yml  changelog.yml  check-links.yml  ci.yml  codeql-analysis.yml  lint.yml  misc.yml  package-prepare-patch-release.yml  package-prepare-release.yml  package-release.yml  prepare-backport-patch.yml  prepare-minor.yml  prepare-package-patch.yml  prepare-release.yml  release-all-prepare.yml  release-all.yml  release-package.yml  scorecard.yml  stale.yml  test.yml
instrumentation/: README.md
instrumentation/opentelemetry-instrumentation-anthropic/: README.rst
instrumentation/opentelemetry-instrumentation-genai-langchain/examples/zero-code/: pyproject.toml  requirements.txt
policies/: genai_span_validation.rego
scripts/: build_a_package.sh  bump_package_major_version.sh  bump_package_minor_version.sh  check_oldest_deps.py  generate_instrumentation_readme.py  generate_release_notes.sh  merge_changelog_to_main.sh  prepare_package_for_patch_release.sh  prepare_package_for_release.sh  tox_matrix.py
util/opentelemetry-test-util-genai/: pyproject.toml
util/opentelemetry-test-util-genai/src/opentelemetry/test_util_genai/: conformance.py  instrumentor.py
util/opentelemetry-util-genai/: AGENTS.md  (+2 more)
(+271 files in other folders)
