[project]
name = "otel-genai-langchain-example-zero-code"
version = "0.0.0"
description = "Zero-code instrumentation example for the OpenTelemetry LangChain instrumentation."
requires-python = ">=3.10"
dependencies = [
  "langchain==1.3.11",
  "langchain-openai>=1.3.3",
  "opentelemetry-sdk>=1.43.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.43.0",
  "opentelemetry-distro~=0.51b0",
]

[tool.uv]
package = false
